--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGO_URI=mongodb+srv://harshnarwariya11:tuhiTohmeriDostHaiAnushka143@arsongs.unjhr.mongodb.net/arsongs?retryWrites=true&w=majority&appName=ARSONGS
+MONGO_URI=mongodb+srv://harshnarwariya11:Anushkarawat1842@arsongs.unjhr.mongodb.net/arsongs?retryWrites=true&w=majority&appName=ARSONGS
