--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,24 @@
 asgiref==3.8.1
+certifi==2024.8.30
+cffi==1.17.1
+charset-normalizer==3.4.0
+colorama==0.4.6
+cryptography==44.0.0
+Deprecated==1.2.15
 Django==5.1.3
 django-cors-headers==4.6.0
 django-filter==24.3
 djangorestframework==3.15.2
+idna==3.10
+pillow==11.0.0
+pycparser==2.22
+PyGithub==2.5.0
+PyJWT==2.10.1
+PyNaCl==1.5.0
+requests==2.32.3
 sqlparse==0.5.2
+tqdm==4.67.1
+typing_extensions==4.12.2
 tzdata==2024.2
+urllib3==2.2.3
+wrapt==1.17.0
